# bitcoin-ml-predictor

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  bitcoin_predictor.py  cli.py  notebook.ipynb  pyproject.toml  requirements.txt  setup.py
